2003-07-09 John Fleck <jfleck@inkstain.net>
        update to new docs build system. This now
	requires the latest gnome-common.
	
	removed:
	* xmldocs.make
	changed:
	* Makefile.am
	* autogen.sh
	* configure.in
	* accessx-status/docs/C/Makefile.am
	* battstat/docs/C/Makefile.am
	* battstat/docs/ja/Makefile.am
	* cdplayer/docs/C/Makefile.am
	* cdplayer/docs/de/Makefile.am
	* cdplayer/docs/es/Makefile.am
	* cdplayer/docs/fr/Makefile.am
	* cdplayer/docs/it/Makefile.am
	* cdplayer/docs/ja/Makefile.am
	* cdplayer/docs/ko/Makefile.am
	* cdplayer/docs/sv/Makefile.am
	* cdplayer/docs/zh_CN/Makefile.am
	* cdplayer/docs/zh_TW/Makefile.am
	* charpick/docs/C/Makefile.am
	* charpick/docs/es/Makefile.am
	* charpick/docs/it/Makefile.am
	* charpick/docs/ja/Makefile.am
	* charpick/help/C/Makefile.am
	* charpick/help/de/Makefile.am
	* charpick/help/es/Makefile.am
	* charpick/help/fr/Makefile.am
	* charpick/help/it/Makefile.am
	* charpick/help/ja/Makefile.am
	* charpick/help/ko/Makefile.am
	* charpick/help/sv/Makefile.am
	* charpick/help/zh_CN/Makefile.am
	* charpick/help/zh_TW/Makefile.am
	* drivemount/docs/C/Makefile.am
	* drivemount/docs/es/Makefile.am
	* drivemount/docs/it/Makefile.am
	* drivemount/docs/ja/Makefile.am
	* drivemount/help/C/Makefile.am
	* geyes/docs/C/Makefile.am
	* geyes/docs/de/Makefile.am
	* geyes/docs/es/Makefile.am
	* geyes/docs/fr/Makefile.am
	* geyes/docs/it/Makefile.am
	* geyes/docs/ja/Makefile.am
	* geyes/docs/ko/Makefile.am
	* geyes/docs/sv/Makefile.am
	* geyes/docs/zh_CN/Makefile.am
	* geyes/docs/zh_TW/Makefile.am
	* gkb-new/docs/C/Makefile.am
	* gkb-new/docs/hu/Makefile.am
	* gkb-new/help/C/Makefile.am
	* gkb-new/help/de/Makefile.am
	* gkb-new/help/es/Makefile.am
	* gkb-new/help/fr/Makefile.am
	* gkb-new/help/it/Makefile.am
	* gkb-new/help/ja/Makefile.am
	* gkb-new/help/ko/Makefile.am
	* gkb-new/help/sv/Makefile.am
	* gkb-new/help/zh_CN/Makefile.am
	* gkb-new/help/zh_TW/Makefile.am
	* gtik/help/C/Makefile.am
	* gtik/help/de/Makefile.am