@@ -96,7 +96,7 @@
             <type>string</type>
             <default>gkb_xmmap us</default>
             <locale name="C">
-                <short>The command what switch your keymap tho this layout</short>
+                <short>The command that switches your keymap to this layout</short>
                 <long>This should be like "gkb_xmmap us", "setxkbmap us" or "xmodmap something.xmm"</long>
             </locale>
         </schema>
