@@ -27,7 +27,7 @@
         <type>bool</type>
         <default>true</default>
         <locale name="C">
-          <short>Autcomplete history</short>
+          <short>Autocomplete history</short>
         </locale>
       </schema>
 
