@@ -179,7 +179,7 @@
         <type>string</type>
         <default>#FEF06B</default>
         <locale name="C">
-          <short>Status wating connection color</short>
+          <short>Status waiting connection color</short>
           <long></long>
         </locale>
       </schema>
