@@ -1,3 +1,10 @@
+2003-07-12 Daniel Baeyens <daniel.baeyens@hispalinux.es>
+	
+	* modemlights/modemlights.schemas.in,
+	gkb-new/gkb.schemas.in,
+	mini-commander/src/mini-commander.schemas.in:
+	Fixed some string issues 
+
 2003-07-09 John Fleck <jfleck@inkstain.net>
         update to new docs build system. This now
 	requires the latest gnome-common.
